--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,8 @@
 ---
 import '../styles/global.css';
 import BaseLayout from '../layouts/BaseLayout.astro';
-
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "My Astro Learning Blog";
 ---
 
@@ -18,9 +19,12 @@ const pageTitle = "My Astro Learning Blog";
             <p>This is where I will post about my journey learning Astro.</p>
 
             <ul>
-                <li><a href="/posts/post-1/">Post 1</a></li>
-                <li><a href="/posts/post-2/">Post 2</a></li>
-                <li><a href="/posts/post-3/">Post 3</a></li>
+                {allPosts.map((post: any) => <BlogPost 
+					url={post.url}
+					title={post.frontmatter.title} 
+					description={post.frontmatter.description} 
+					imgSrc={post.frontmatter.image.url} 
+					imgAlt={post.frontmatter.image.alt} />)}
             </ul>    
         </BaseLayout>
 	</body>
