--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -7,6 +7,7 @@ const { platform, username } = Astro.props;
       color: white;
       background-color: #4c1d95;
       text-decoration: none;
+      border-radius: 100px;
     }
 </style>
 <a href={`https://www.${platform}.com/${username}`}>{platform}</a>
