--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,9 +12,9 @@ const { pageTitle } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
   </head>
-  <body>
+  <body class="light">
     <Header />
-    <h1>{pageTitle}</h1>
+    <h1 class="text-md-primary">{pageTitle}</h1>
     <slot />
     <Footer />
     <script>
