--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,14 +7,14 @@
   --md-sys-color-on-primary: rgb(255 255 255);
   --md-sys-color-primary-container: rgb(255 164 73);
   --md-sys-color-on-primary-container: rgb(111 61 0);
-  --md-sys-color-secondary: rgb(124 83 95);
+  --md-sys-color-secondary: rgb(141 79 0);
   --md-sys-color-on-secondary: rgb(255 255 255);
-  --md-sys-color-secondary-container: rgb(228 177 191);
-  --md-sys-color-on-secondary-container: rgb(104 66 78);
-  --md-sys-color-tertiary: rgb(141 79 0);
+  --md-sys-color-secondary-container: rgb(255 164 73);
+  --md-sys-color-on-secondary-container: rgb(111 61 0);
+  --md-sys-color-tertiary: rgb(124 83 95);
   --md-sys-color-on-tertiary: rgb(255 255 255);
-  --md-sys-color-tertiary-container: rgb(255 164 73);
-  --md-sys-color-on-tertiary-container: rgb(111 61 0);
+  --md-sys-color-tertiary-container: rgb(228 177 191);
+  --md-sys-color-on-tertiary-container: rgb(104 66 78);
   --md-sys-color-error: rgb(186 26 26);
   --md-sys-color-on-error: rgb(255 255 255);
   --md-sys-color-error-container: rgb(255 218 214);
@@ -36,14 +36,14 @@
   --md-sys-color-on-primary-fixed: rgb(45 22 0);
   --md-sys-color-primary-fixed-dim: rgb(255 184 118);
   --md-sys-color-on-primary-fixed-variant: rgb(107 59 0);
-  --md-sys-color-secondary-fixed: rgb(255 217 226);
-  --md-sys-color-on-secondary-fixed: rgb(48 18 28);
-  --md-sys-color-secondary-fixed-dim: rgb(237 185 199);
-  --md-sys-color-on-secondary-fixed-variant: rgb(97 60 72);
-  --md-sys-color-tertiary-fixed: rgb(255 220 192);
-  --md-sys-color-on-tertiary-fixed: rgb(45 22 0);
-  --md-sys-color-tertiary-fixed-dim: rgb(255 184 118);
-  --md-sys-color-on-tertiary-fixed-variant: rgb(107 59 0);
+  --md-sys-color-secondary-fixed: rgb(255 220 192);
+  --md-sys-color-on-secondary-fixed: rgb(45 22 0);
+  --md-sys-color-secondary-fixed-dim: rgb(255 184 118);
+  --md-sys-color-on-secondary-fixed-variant: rgb(107 59 0);
+  --md-sys-color-tertiary-fixed: rgb(255 217 226);
+  --md-sys-color-on-tertiary-fixed: rgb(48 18 28);
+  --md-sys-color-tertiary-fixed-dim: rgb(237 185 199);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(97 60 72);
   --md-sys-color-surface-dim: rgb(231 215 205);
   --md-sys-color-surface-bright: rgb(255 248 245);
   --md-sys-color-surface-container-lowest: rgb(255 255 255);
@@ -95,11 +95,37 @@
   --color-md-surface-container-highest: var(--md-sys-color-surface-container-highest);
 }
 
-@layer utilities {
-  .type-body-large {
+
+  @utility type-body-large {
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
     letter-spacing: 0.5px;
   }
-}
+
+  @utility type-headline-medium-emphasized {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: 500;
+    letter-spacing: 0px;
+  }
+
+  @utility type-headline-small {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+  }
+
+  @utility type-display-large-emphasized {
+    font-size: 57px;
+    line-height: 64px;
+    font-weight: 500;
+    letter-spacing: -0.25px;
+  }
+
+  @utility type-title-medium {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    letter-spacing: 0.15px;
+  }
