--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -96,36 +96,43 @@
 }
 
 
-  @utility type-body-large {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    letter-spacing: 0.5px;
-  }
+@utility type-body-large {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+}
 
-  @utility type-headline-medium-emphasized {
-    font-size: 28px;
-    line-height: 36px;
-    font-weight: 500;
-    letter-spacing: 0px;
-  }
+@utility type-headline-medium-emphasized {
+  font-size: 28px;
+  line-height: 36px;
+  font-weight: 500;
+  letter-spacing: 0px;
+}
 
-  @utility type-headline-small {
-    font-size: 24px;
-    line-height: 32px;
-    font-weight: 400;
-  }
+@utility type-headline-small {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 400;
+}
 
-  @utility type-display-large-emphasized {
-    font-size: 57px;
-    line-height: 64px;
-    font-weight: 500;
-    letter-spacing: -0.25px;
-  }
+@utility type-display-large-emphasized {
+  font-size: 57px;
+  line-height: 64px;
+  font-weight: 500;
+  letter-spacing: -0.25px;
+}
 
-  @utility type-title-medium {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    letter-spacing: 0.15px;
-  }
+@utility type-title-medium {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  letter-spacing: 0.15px;
+}
+
+@utility type-label-medium {
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
