--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import { Image } from 'astro:assets';
 import '../styles/global.css';
 import Logo from '../components/Logo.astro';
 import heroImg from '../assets/HeroImage.png';
+import MainProducts from '../components/sections/mainProducts.astro';
 ---
 <BaseLayout>
 
@@ -26,5 +27,7 @@ import heroImg from '../assets/HeroImage.png';
       />
       <div class="absolute bg-linear-to-b from-44% from-[rgba(255,255,255,0)] inset-0 rounded-4xl to-72% to-[rgba(255,255,255,0.8)] md:hidden -z-10" /></div>
     </div>
+
+    <MainProducts />
 
 </BaseLayout>
