--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,7 @@
 ---
 // Header.astro
 import MdButton from "./MdButton.astro";
+import Contact from "./Contact.astro";
 
 const pathname = Astro.url.pathname;
 
@@ -48,13 +49,12 @@ const currentPath = pathname.replace(/\/$/, "") || "/";
     </ul>
 
     <div class="flex-1 md:flex-none flex justify-end">
-        <MdButton 
-        variant="tonal" 
-        size="md"
-        class="w-full md:w-auto" 
-        >
-        Faça um orçamento
-        </MdButton>
+        <Contact
+          variant="tonal" 
+          size="md"
+          class="w-full md:w-auto" 
+          msg="Faça um orçamento"
+        />
     </div>
 
   </nav>
